# pm_back_end

./: .eslintignore  .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: windows-builder.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  store.rs
src/api/: requests.ts
src/hooks/: useSettings.ts  useTheme.tsx
src/lib/: css.ts  file.ts  fuzz.ts  tools.ts
src/pages/Home/: Home.tsx
src/pages/Home/ui/: BibleView.tsx  ControlBar.tsx  ControlButton.tsx  PlaylistSlideBox.tsx  SettingsView.tsx  TabButton.tsx  Tabs.tsx  bibleview.module.css  playlistSection.tsx  tabs.module.css
src/pages/Home/ui/BibleView/: BibleView.tsx  BookContainer.tsx  ChapterContainer.tsx  VerseContainer.tsx
src/pages/Home/ui/ImageView/: ImageButton.tsx  ImageView.tsx
src/pages/Home/ui/SongsView/: LyricButton.tsx  SongsView.tsx
src/pages/Live/: Live.tsx
src/store/: diaplay.ts  display.ts  invoke.ts  playlist.ts
src/ui/: DisplayScreen.tsx
