[package]
name = "pm_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["Christopher Vos"]
license = ""
repository = ""
default-run = "pm_manager"
edition = "2021"
# rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "path-all", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-write-file", "fs-read-file", "window-set-cursor-grab", "window-start-dragging", "windows7-compat"] }
rustpm_orm = { git = "https://github.com/fox5352/rustpm_orm.git", rev="7a0083d10f66cfd90053ee45dac0c4a91fe3972a"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
default = ["custom-protocol"]
custom-protocol = [ "tauri/custom-protocol" ]
